Correct panel spacing

--- a/src/components/panel/panel.scss
+++ b/src/components/panel/panel.scss
@@ -22,6 +22,7 @@
   flex-basis: var(--zn-spacing-small-panel);
   width: 100%;
   background-color: rgba(var(--zn-panel), var(--zn-panel-opacity));
+  margin-bottom: 3px;
 
   &__inner {
     overflow: hidden;
